Collapse Navbar Function bug fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,11 +6,17 @@ body {
 
 }
 
+nav {
+    /* display: inline; */
+}
+
 .content {
     margin: 80px;
 }
 
-#name {
+#name,
+#submit {
+
     font-family: 'Times New Roman', Times, serif;
     font-size: 24px;
     font-weight: bold;
